# picodeck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: action.yml
RTT/: SEGGER_RTT.c  SEGGER_RTT.h
enclosures/pedal/: pi-pico-holder.stl
src/: main.c  tusb_config.h  usb_descriptors.c
